# tinygraphics

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  app.h  renderer.h
cmake/: FindGLEW.cmake  FindGLFW3.cmake  FindGLM.cmake
examples/: CMakeLists.txt  instances.cpp  light.cpp  planets.cpp  planets.h  simpleShader.cpp  viewer.cpp  viewer.h
examples/game/: CMakeLists.txt  game.cpp  game.h  main.cpp
examples/viewer/: CMakeLists.txt  viewer.cpp
examples/viewer/assets/shaders/: v3n3_frag.glsl  v3n3_vert.glsl
include/tinygraphics/: app.h  camera.h  framebuffer.h  log.h  renderer.h  shader.h  textrenderer.h  texture.h
include/tinygraphics/utils/: bbox.h  mesh.h  meshbufferobjects.h  objio.h
shaders/: v2t2_frag.glsl  v2t2_vert.glsl  v3n3_frag.glsl  v3n3_vert.glsl  v3n3t2_frag.glsl  v3n3t2_vert.glsl  v3n3t2t3bt3_frag.glsl  v3n3t2t3bt3_vert.glsl
src/: CMakeLists.txt  app.cpp  camera.cpp  cubemap.cpp  framebuffer.cpp  indexbuffer.cpp  renderer.cpp  shader.cpp  testapp.cpp  textrenderer.cpp  texture.cpp  tinygraphicsConfig.cmake  vertexarray.cpp  vertexbuffer.cpp
src/utils/: mesh.cpp  meshbufferobjects.cpp  objio.cpp
tools/: CMakeLists.txt  asset2cpp.cpp
utils/: mesh.cpp  meshbufferobjects.cpp  meshgl.cpp
